src/components/ContextMenu/ContextMenu.scss
.memobit-context-menu-back-drop {
    background-color: var(--backdrop-color);
    opacity: 0.2;
}
.memobit-context-menu {
    position: fixed;
    z-index: 1000;
    color: var(--dropdown-options-color);
    background-color: var(--dropdown-options-background-color);
    border: 1px solid var(--dropdown-border-color);
    border-radius: var(--spacing-4);
    box-shadow: var(--modal-box-shadow);
    padding: var(--spacing-4);
}

